Refactored render_state a little

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ name = "oxygin"
 version = "0.1.0"
 edition = "2021"
 
+[profile.profiling]
+inherits = "release"
+debug = true
+
 [lib]
 path = "src/lib.rs"
 
